--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h2>HTML Iframes</h2>
 <p>You can also use the CSS height and width properties to specify the size of the iframe:</p>
 
-<iframe src="demo_iframe.htm" style="height:1920px;width:1080px" title="Iframe Example"></iframe>
+<iframe src="google.com" style="height:1920px;width:1080px" title="Iframe Example"></iframe>
 
 </body>
 </html>
